--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REDDIT_CLIENT_ID='C1zVEgEKJ7Ke3HszjNbH6Q'
-REDDIT_CLIENT_SECRET='t9bD0zdGMSpV5kOgKWqnNi6WiCrA-w'
+REDDIT_CLIENT_ID=C1zVEgEKJ7Ke3HszjNbH6Q
+REDDIT_CLIENT_SECRET=t9bD0zdGMSpV5kOgKWqnNi6WiCrA-w
